update documentation/debugging
